<resources>
    <string name="app_name">TodoApp</string>
    <string name="task_list">Task List</string>
    <string name="pending">Pending</string>
    <string name="benchmarking">Benchmarking</string>
    <string name="_10_00_am">10:00 AM</string>
    <string name="add_task">Add a task</string>
    <string name="task_title">Task Title</string>
    <string name="time">Time</string>
    <string name="cancel">Cancel</string>
    <string name="add">Add</string>
    <string name="date">Date</string>
    <string name="my_order">My Order</string>
    <string name="sort_by">Sort by</string>
    <string name="warning">Warning</string>
    <string name="task_title_empty">Task Title is Empty</string>
    <string name="task_date_empty">Task date is Empty</string>
    <string name="task_date_invalid">Task date is invalid</string>
    <string name="deadline_extend">Task deadline cannot be more then current time</string>
    <string name="task_added_successfully">Task added successfully."</string>
    <string name="do_you_want_to_delete_classification_this_action_can_t_be_undone">Do you want to delete “Classification”, this action can’t be undone.</string>
    <string name="ok">OK</string>
    <string name="add_a_task">Add a task</string>
    <string-array name="spinnerArray">
        <item>AM</item>
        <item>PM</item>
    </string-array>
</resources>