<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <com.google.android.material.checkbox.MaterialCheckBox
        android:id="@+id/cbCompleted"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/benchmarking"
        android:textSize="@dimen/_13sdp"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toEndOf="@id/cbCompleted"
        app:layout_constraintTop_toTopOf="@id/cbCompleted" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvTaskStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:alpha="0.45"
        android:text="@string/pending"
        android:textColor="@color/black"
        android:textSize="@dimen/_10sdp"
        app:layout_constraintEnd_toStartOf="@id/ivCross"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toStartOf="@id/tvDescription"
        app:layout_constraintTop_toBottomOf="@id/tvDescription" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvTaskTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:alpha="0.45"
        android:layout_marginEnd="@dimen/_20sdp"
        android:text="@string/_10_00_am"
        android:textColor="@color/black"
        android:textSize="@dimen/_10sdp"
        app:layout_constraintEnd_toStartOf="@id/ivCross"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintBottom_toBottomOf="@id/ivCross"
        app:layout_constraintTop_toTopOf="@id/ivCross" />

    <ImageView
        android:id="@+id/ivCross"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/_8sdp"
        android:src="@drawable/ic_cross"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>