<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputTaskTitle"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginEnd="@dimen/_20sdp"
        android:hint="@string/task_title"
        app:boxStrokeColor="@color/text_color_gray"
        app:hintTextColor="@color/text_color_gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etTaskTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:maxLines="1"
            android:textColor="@color/black"
            android:textColorHint="@color/text_color_gray" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputTaskTime"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_marginEnd="@dimen/_10sdp"
        android:clickable="false"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:hint="@string/time"
        app:boxStrokeColor="@color/text_color_gray"
        app:hintTextColor="@color/text_color_gray"
        app:layout_constraintEnd_toStartOf="@id/cardView"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintHorizontal_weight="0.7"
        app:layout_constraintStart_toStartOf="@id/textInputTaskTitle"
        app:layout_constraintTop_toBottomOf="@id/textInputTaskTitle">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etTaskTime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="false"
            android:enabled="true"
            android:focusableInTouchMode="false"
            android:inputType="text"
            android:maxLines="1"
            android:textColor="@color/black"
            android:textColorHint="@color/text_color_gray" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cardView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_4sdp"
        app:cardCornerRadius="4dp"
        app:layout_constraintBottom_toBottomOf="@id/textInputTaskTime"
        app:layout_constraintEnd_toEndOf="@id/textInputTaskTitle"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintHorizontal_weight="0.3"
        app:layout_constraintStart_toEndOf="@id/textInputTaskTime"
        app:layout_constraintTop_toTopOf="@+id/textInputTaskTime"
        app:strokeColor="#b7b7b7"
        app:strokeWidth="@dimen/_1sdp">

        <androidx.appcompat.widget.AppCompatSpinner
            android:id="@+id/spinnerTaskTime"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:dropDownSelector="@drawable/ic_spinner_arrow"
            android:entries="@array/spinnerArray"
            android:spinnerMode="dropdown" />
    </com.google.android.material.card.MaterialCardView>

    <TextView
        android:id="@+id/tvCancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_30sdp"
        android:layout_marginEnd="@dimen/_10sdp"
        android:background="@drawable/bg_cancel"
        android:padding="@dimen/_8sdp"
        android:paddingStart="@dimen/_20sdp"
        android:paddingEnd="@dimen/_20sdp"
        android:text="@string/cancel"
        android:textAllCaps="true"
        android:textColor="@color/text_color_primary"
        app:layout_constraintEnd_toStartOf="@id/tvAdd"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textInputTaskTime" />

    <TextView
        android:id="@+id/tvAdd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_10sdp"
        android:background="@drawable/bg_cancel"
        android:backgroundTint="@color/text_color_primary"
        android:padding="@dimen/_8sdp"
        android:paddingStart="@dimen/_20sdp"
        android:paddingEnd="@dimen/_20sdp"
        android:text="@string/add"
        android:textAllCaps="true"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="@id/tvCancel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toEndOf="@id/tvCancel"
        app:layout_constraintTop_toTopOf="@id/tvCancel" />
</androidx.constraintlayout.widget.ConstraintLayout>